--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^7.3.0",
     "isomorphic-fetch": "^2.2.1",
     "react-test-renderer": "^15.6.1",
-    "sinon": "^3.3.0"
+    "sinon": "^3.3.0",
+    "sinon-spy-react": "^2.0.1"
   }
 }
