--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "isomorphic-fetch": "^2.2.1",
     "react-test-renderer": "^15.6.1",
     "sinon": "^3.3.0",
-    "sinon-spy-react": "^2.0.1"
+    "sinon-spy-react": "^2.0.1",
+    "sinon-stub-promise": "^4.0.0"
   }
 }
