--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
     "isomorphic-fetch": "^2.2.1",
+    "jasmine": "^2.8.0",
+    "jasmine-react": "^1.1.0",
     "react-test-renderer": "^15.6.1",
     "sinon": "^3.3.0",
     "sinon-spy-react": "^2.0.1",
