--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^15.6.1",
     "react-loading": "^0.1.4",
     "react-notification-system": "^0.2.15",
+    "react-notify-toast": "^0.3.2",
     "react-router": "^3.0.0",
     "react-scripts": "1.0.11"
   },
