--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "flow": "flow"
   },
   "devDependencies": {
+    "coveralls": "^3.0.0",
     "enzyme": "^2.9.1",
     "es6-promise": "^4.1.1",
     "eslint": "^4.5.0",
