--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
+    "fetch-mock": "^5.12.2",
     "isomorphic-fetch": "^2.2.1",
     "jasmine": "^2.8.0",
     "jasmine-react": "^1.1.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^15.6.1",
     "sinon": "^3.3.0",
     "sinon-spy-react": "^2.0.1",
