--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "es6-promise": "^4.1.1",
-    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.19.2",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
@@ -19,13 +18,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --coverage --collectCoverageFrom=src/**/*.jsx",
-    "eject": "react-scripts eject",
-    "flow": "flow"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "coveralls": "^3.0.0",
     "enzyme": "^2.9.1",
-    "es6-promise": "^4.1.1",
     "eslint": "^4.5.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
